...
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/back"
                android:layout_centerVertical="true"
                android:text="Envois d'argent"
                android:textSize="@dimen/txt_grand_titre_1"
                android:textStyle="bold"
                android:id="@+id/titrePage"
                android:fontFamily="@font/roboto"
                android:textColor="@color/colorBlanche"/>

        </RelativeLayout>


...
                android:text="Envoie sur territoire local"
                android:fontFamily="@font/roboto_light"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTransfertCompteVersCash"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="6dp"
...
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardEnvoisCashVersMobil"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="6dp"
...
