...

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Operation réussie"
                android:textSize="@dimen/txt_grand_titre_1"
                android:id="@+id/titreRapport"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/colorBlanche" />

            <TextView
...
                    android:textColor="@color/colorEU"
                    android:textSize="@dimen/txt_normal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:id="@+id/fermer"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/contour_2"
                    android:fontFamily="@font/roboto_light"
                    android:layout_toRightOf="@+id/relancer"
                    android:padding="7dp"
                    android:text="FERMER"
...
